# mta-data-2024

./: Gameday.ipynb  Main.ipynb  README.md  hello.py  knicks_schedule.csv  liberty_schedule.csv  nets_schedule.csv  ny_home_games.csv  nym_schedule.csv  nyy_schedule.csv  open-meteo-40.74N74.04W51m.csv  pyproject.toml  rangers_schedule.csv  render.html
